Fixed headings, logos and spacing

--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ body {
 }
 .headertext {
     font-size: 20vmin;
-    line-height: 100%;
+    line-height: 1.3;
     color: #f1b848;
     -webkit-text-stroke-width: 2px;
     -webkit-text-stroke-color: #0a1a29;
@@ -243,7 +243,8 @@ body{
 
 .logo_words {
     text-align: center;
-    size: 200px; 
+    size: 10vmin; 
+    line-height: center;
 }
 
 .main{
@@ -346,7 +347,7 @@ body{
 h6{
     font-family: 'Lato', sans-serif;
     color: #0a1a29;
-    font-size: 2rem;
+    font-size: 1.75rem;
 }
 
 h1{
@@ -356,7 +357,7 @@ h1{
     font-family: 'Lato', sans-serif;
     position: relative;
     font-size: 15vmin;
-    line-height: 0.9;
+    line-height: 1;
     text-align: center;
 }
 .nav-link{
